// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SectionTitle スナップショット ContainElements 1`] = `
<body>
  <div>
    <h2
      class="section-title_sectionTitleStyle__17zkrzm0"
    >
      <a
        class="link_linkStyle__jc9bkl0"
        href="#undefined"
      >
        Sample 
        <code>
          Title
        </code>
      </a>
    </h2>
  </div>
</body>
`;

exports[`SectionTitle スナップショット Sample 1`] = `
<body>
  <div>
    <h2
      class="section-title_sectionTitleStyle__17zkrzm0"
    >
      <a
        class="link_linkStyle__jc9bkl0"
        href="#undefined"
      >
        Sample Title
      </a>
    </h2>
  </div>
</body>
`;

exports[`SectionTitle スナップショット SubSection 1`] = `
<body>
  <div>
    <h3
      class="section-title_subsectionTitleStyle__17zkrzm1"
    >
      <a
        class="link_linkStyle__jc9bkl0"
        href="#undefined"
      >
        Sample SubTitle
      </a>
    </h3>
  </div>
</body>
`;
